--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,6 +4,8 @@
 }
 
 .maxWidthWrapper {
+  /* isolation: isolate; */
+  position: relative;
 }
 
 .header {
@@ -27,11 +29,20 @@
 .characterWrapper {
   position: fixed;
   top: 5%;
-  left: 60%;
+  left: 55%;
   bottom: 2%;
   min-height: 500px;
 }
 
 .controlColumn {
   width: 50%;
+}
+
+.perspectiveBg {
+  position: fixed;
+  /* z-index: -1; */
+  top: 60%;
+  bottom: 0;
+  width: 100%;
+  background: hsl(195deg, 20%, 86%);
 }
