tweak control panel scrollbars

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,5 +1,7 @@
 .buttonRow {
-  height: 70px;
+  /* height: 70px; */
   overflow-x: auto;
   white-space: nowrap;
+  margin: 0 -24px -24px -24px;
+  padding: 24px;
 }
